--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -1,7 +1,7 @@
 <!-- TODO: remove cdn and use static files instead -->
-<link rel="stylesheet" href="https://unpkg.com/xterm/dist/xterm.css" />
-<script src="https://unpkg.com/xterm/dist/xterm.js"></script>
-<script src="https://unpkg.com/xterm/dist/addons/attach/attach.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/xterm@4.9.0/css/xterm.css" />
+<script src="https://unpkg.com/xterm@4.9.0/lib/xterm.js"></script>
+<script src="https://unpkg.com/xterm-addon-attach@0.6.0/lib/xterm-addon-attach.js"></script>
 <style>
     body {
         background: black;
@@ -9,14 +9,13 @@
 </style>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        Terminal.applyAddon(attach);
-
         var url = new URL('/ws', window.location.href);
         url.protocol = url.protocol.replace('http', 'ws');
 
         var term = new Terminal();
         var socket = new WebSocket(url.href);
-        term.attach(socket);
+        var attachAddon = new AttachAddon.AttachAddon(socket);
+        term.loadAddon(attachAddon);
         term.open(document.getElementById('terminal'));
     });
 </script>
